--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -37,6 +37,10 @@ on early-init
 
     chown system system /sys/kernel/debug/kgsl/proc
     chmod 644 /proc/cmdline
+    
+   # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
@@ -365,9 +369,8 @@ on property:ro.config.ksm=true
     write /sys/kernel/mm/ksm/sleep_millisecs 500
     write /sys/kernel/mm/ksm/run 1
 
-#enable zram
-on property:ro.config.zram.enabled=true
-    write /proc/sys/vm/page-cluster 0
+ # Enable swap
+    swapon_all /fstab.qcom
     write /proc/sys/vm/swappiness 100
 
 # Allow usb charging to be disabled peristently
