--- a/arch/arm/configs/msm8916_sec_j5nlte_eur_defconfig
+++ b/arch/arm/configs/msm8916_sec_j5nlte_eur_defconfig
@@ -85,6 +85,17 @@ CONFIG_CHECK_SIMSLOT_COUNT=y
 # CONFIG_CHECK_SIMSLOT_COUNT_GPIO is not set
 CONFIG_CHECK_SIMSLOT_COUNT_DT=y
 
+# ZRAM
+# CONFIG_NF_CONNTRACK_ZONES is not set
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+CONFIG_SDFAT_UEVENT=y
+
+
 # SSWAP
 CONFIG_SWAP=y
 CONFIG_FRONTSWAP=y
