j5lte: enable ZRAM

--- a/arch/arm/configs/msm8916_sec_j5lte_chncmcc_defconfig
+++ b/arch/arm/configs/msm8916_sec_j5lte_chncmcc_defconfig
@@ -88,6 +88,16 @@ CONFIG_CHECK_SIMSLOT_COUNT_DT=y
 # MMC
 CONFIG_SEC_HYBRID_TRAY=y
 
+# ZRAM
+# CONFIG_NF_CONNTRACK_ZONES is not set
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+CONFIG_SDFAT_UEVENT=y
+
 # SSWAP
 CONFIG_SWAP=y
 CONFIG_FRONTSWAP=y
